...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Zt4-Z1-KNk" id="r5e-mR-zRh"/>
                            <outlet property="delegate" destination="Zt4-Z1-KNk" id="B9X-k4-yp8"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Movies" id="7xR-2F-D3j">
                        <barButtonItem key="rightBarButtonItem" image="filter" id="3Xu-JV-8UY">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <segue destination="Soi-9U-OC2" kind="presentation" identifier="filterSegue" animates="NO" modalPresentationStyle="overCurrentContext" id="DzY-zA-1Xx"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                        <rect key="frame" x="96" y="243" width="48" height="37"/>
                                        <color key="backgroundColor" red="0.28627450980000002" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="48" id="yJC-EH-3HB"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="AvenirNextCondensed-Medium" family="Avenir Next Condensed" pointSize="18"/>
                                        <state key="normal" title="Apply">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="4"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="applyFiterAction:" destination="Soi-9U-OC2" eventType="touchUpInside" id="bXH-Kr-ahu"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filter Movies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ysf-Uv-cc6">
                                        <rect key="frame" x="80.5" y="20" width="79" height="23.5"/>
                                        <fontDescription key="fontDescription" name="AvenirNextCondensed-Medium" family="Avenir Next Condensed" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1940" minValue="1940" maxValue="2017" translatesAutoresizingMaskIntoConstraints="NO" id="XjD-1P-vsI">
...
                                        <rect key="frame" x="8" y="176" width="224" height="31"/>
                                        <color key="tintColor" red="0.28627450980000002" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                                        <connections>
                                            <action selector="maxYearSliderValueChangedWithSender:" destination="Soi-9U-OC2" eventType="valueChanged" id="afT-ku-x8J"/>
                                        </connections>
                                    </slider>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Min Release Year" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jbW-eO-OrE">
                                        <rect key="frame" x="8" y="51.5" width="95" height="22"/>
                                        <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="16"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Max Release Year" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNR-Sa-KDe">
                                        <rect key="frame" x="8" y="139" width="96.5" height="22"/>
                                        <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="16"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1960" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1YH-jr-kXm">
...
